2048-game/game_2048_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: game-2048 # name of this service
spec:
  ports: # ports to expose for this service
    - name: http # name for this port
      port: 80 # port that this service will listen on and receive traffic on
      targetPort: 80 # port on the pods that traffic will be sent to
  selector:
    app: game-2048 # which deployment run this service (the pods with a metadata.name value of "game-2048")
